# truth

./: .gitignore  AGENTS.md  LICENSE  README.md  VISION.MD  VISION.md  goals.md  pyproject.toml  session-log.jsonl
.autopilot/: config.json
.cursor/: mcp.json  mcp.json.example
.cursor/rules/: truth-memory.mdc
.cursor/skills/truth-memory/: SKILL.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-okf-memory-store/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-REVIEW.md  01-UAT.md  01-VERIFICATION.md
.planning/phases/02-hybrid-index/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-UAT.md
.planning/phases/03-agent-tools/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-memory-inspector/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-VERIFICATION.md
.planning/phases/05-integration/: 05-01-PLAN.md  05-02-PLAN.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-RESEARCH.md
.planning/research/: SUMMARY.md
docs/: index.html
notes/: agent-workflow.md  hybrid-search.md  log-convention.md  log.md  okf-format.md  sqlite-vectors.md
notes/decisions/: mcp-integration.md
prompts/: system.md
skills/truth-memory/: SKILL.md
tests/: conftest.py  stress_mcp_results.json  stress_mcp_shared_notes.py  test_agent_api.py  test_chunking.py  test_indexer.py  test_integration.py  test_mcp_server.py  test_packaging.py  test_paths.py  test_search_filters.py  test_search_quality.py  test_skill_install.py  test_store.py  test_watcher_correctness.py
truth/: __init__.py  cli.py  export.py  mcp_server.py  serve.py  skill_install.py  smoke.py
truth/bundled/cursor/rules/: truth-memory.mdc
truth/bundled/truth-memory/: SKILL.md
truth/index/: __init__.py  chunking.py  db.py  embeddings.py  events.py  hashutil.py  indexer.py  search.py  search_quality.py  watcher.py  watcher_correctness.py
truth/inspect/: __init__.py  _paths.py  changes.py  graph.py  links.py  tree.py
truth/static/: inspector.html
truth/store/: __init__.py  frontmatter.py  links.py  paths.py
truth/tools/: __init__.py  agent_api_check.py  delete.py  schemas.py  write.py
