[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "truth"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "sqlite-vec>=0.1.6",
    "sentence-transformers>=3.0",
    "huggingface-hub>=0.26.0",
    "watchdog>=4.0",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
truth = "truth.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["truth*"]
