[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "truth-source"
version = "1.1.0"
description = "Local-first OKF agent memory — markdown is truth, SQLite is the search index"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "0jrm" }]
keywords = ["okf", "agent-memory", "markdown", "sqlite", "embeddings", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "pyyaml>=6.0",
    "sqlite-vec>=0.1.6",
    "sentence-transformers>=3.0",
    "huggingface-hub>=0.26.0",
    "watchdog>=4.0",
    "mcp>=1.27,<2",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/0jrm/truth"
Documentation = "https://github.com/0jrm/truth#readme"
Repository = "https://github.com/0jrm/truth"
Issues = "https://github.com/0jrm/truth/issues"

[project.scripts]
truth = "truth.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["truth*"]

[tool.setuptools.exclude-package-data]
"*" = [".planning/*", "session-log.jsonl", "notes/*"]
